[package]
name = "programming-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.0"
mime = "0.3.16"
rand = "0.8.5"
snafu = { version = "0.7.0", features = ["guide", "backtrace", "backtraces", "futures"] }
thiserror = "1.0.30"
wyz = "0.5.0"
